# Calc

./: CMakeLists.txt
include/: AST.h  Context.h  Lexer.h  Parser.h  Visitor.h
src/: AST.cpp  Context.cpp  Lexer.cpp  Parser.cpp  Visitor.cpp  main.cpp
tests/: TEST_AST.cpp  TEST_CALCULATING.cpp  TEST_DERIVATIVE.cpp  TEST_LEXER.cpp  TEST_PARSER.cpp
